@@ -116,6 +116,7 @@ Larry Jones		larry.jones@sdrc.com
 Lars Hecking		lhecking@nmrc.ucc.ie
 Lars J. Aas		larsa@sim.no
 Laurent Morichetti	laurentm@cup.hp.com
+Leo Davis		ldavis@fonix.com
 Maciej Stachowiak	mstachow@mit.edu
 Maciej W. Rozycki	macro@ds2.pg.gda.pl
 Manu Rouat		emmanuel.rouat@wanadoo.fr
