@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 1999, 2001, 2002  Free Software Foundation, Inc.
+# Copyright (C) 1999, 2001, 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -21,7 +21,7 @@
 # Test associated with PR 19.
 # From Matthew D. Langston.
 
-required='gcc gzip'
+required='gcc gzip flex'
 . ./defs || exit 1
 
 # Ignore user CFLAGS.
