@@ -1,5 +1,5 @@
 #! /bin/sh
-# Copyright (C) 2002  Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003  Free Software Foundation, Inc.
 #
 # This file is part of GNU Automake.
 #
@@ -20,7 +20,7 @@
 
 # Test for subdir lexers.
 
-required='gcc GNUmake gzip'
+required='gcc GNUmake gzip flex'
 . ./defs || exit 1
 
 set -e
