@@ -1,3 +1,8 @@
+2003-02-26  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* tests/lex3.test, tests/lex5.test: Require flex.
+	Reported by Leo Davis.
+
 2003-02-25  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* lib/am/depend2.am (?GENERIC?%EXT%.o, ?GENERIC?%EXT%.obj): Do not
